@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Thu, Jul 23, 2009
+---------------------------------------------------------------------
+- Made UUID support optional (affects MySQL v5+ users only).
+
 Tue, Jul 21, 2009
 ---------------------------------------------------------------------
 - Upgraded HAML/SASS to version 2.2.2 (Powerful Penny) and made it a plugin.
